# QtWaitingSpinner

./: .gitignore  pyproject.toml  pyproject.toml.bkp
pyqtspinner/: configurator.py  spinner.py
tests/: test_spinner.py
