[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyqtspinner"
description = "Waiting spinner for PyQt6"
version = "1.0.0"
license = "MIT"
authors = [
  {name = "Denis <fbjorn@users.noreply.github.com>", email = ""}
]
maintainers = [
  {name = "Debruycker Vincent", email = ""}
]
dependencies = [
    "pyqt6 (>=6.8.1,<7.0.0)"
]


